Add link for ДЗ №2 in index.html
Added a new homework link for ДЗ №2.

--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -19,10 +19,16 @@
                         <a href="homework_1/index.html">ДЗ №1</a>
                     </h3>
                 </li>
+                 <li>
+                    <h3>
+                        <a href="homework_2/index.html">ДЗ №2</a>
+                    </h3>
+                </li>
             </ol>
         </main>
         <footer class="footer">
         </footer>
         <script src="js/script.js"></script>
     </body>
+
 </html>
