--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -24,6 +24,11 @@
                         <a href="homework_2/index.html">ДЗ №2</a>
                     </h3>
                 </li>
+                 <li>
+                    <h3>
+                        <a href="homework_3/index.html">ДЗ №3</a>
+                    </h3>
+                </li>
             </ol>
         </main>
         <footer class="footer">
@@ -32,3 +37,4 @@
     </body>
 
 </html>
+
