Add link for homework 4 in index.html

--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -29,6 +29,11 @@
                         <a href="homework_3/index.html">ДЗ №3</a>
                     </h3>
                 </li>
+                <li>
+                    <h3>
+                        <a href="homework_4/index.html">ДЗ №4</a>
+                    </h3>
+                </li>
             </ol>
         </main>
         <footer class="footer">
@@ -37,4 +42,5 @@
     </body>
 
 </html>
+
 
